--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.5.2",
     "font-awesome": "^4.7.0",
+    "history": "^4.10.0",
+    "jwt-decode": "^3.1.2",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-datepicker": "^3.2.2",
